<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
            android:checkableBehavior="all">
        <item android:id="@+id/mainFragment"
              android:icon="@drawable/ic_home"
              android:title="@string/home"/>
        <item android:id="@+id/favoriteFragment"
              android:icon="@drawable/ic_favorite_border"
              android:title="@string/favorite"/>
        <item android:id="@+id/aboutFragment"
              android:icon="@drawable/ic_info_outline"
              android:title="@string/about_app"/>
    </group>

    <item android:title="@string/others">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_feedback"
                      android:icon="@drawable/ic_feedback"
                      android:title="@string/feedback"/>

                <item android:id="@+id/nav_rate_app"
                      android:icon="@drawable/ic_rate_app"
                      android:title="@string/rate_app"/>

                <item android:id="@+id/nav_share_app"
                      android:icon="@drawable/ic_share"
                      android:title="@string/share_app"/>

                <item android:id="@+id/nav_disclaimer"
                      android:icon="@drawable/ic_disclaimer"
                      android:title="@string/disclaimer"/>
            </group>
        </menu>
    </item>
</menu>