<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="version" type="String"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.about.AboutFragment" android:id="@+id/frameLayout3">

        <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="96dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"/>


        <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/textPrimary"
                android:textAlignment="center"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:id="@+id/materialTextView"/>

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{`Version: ` + version, default=`Version: `}"
                android:textColor="@color/textSecondary"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.0"/>


        <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DISCLAIMER"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/materialTextView3"/>

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_text"
                android:textColor="@color/textSecondary"
                android:textStyle="italic"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/materialTextView2" android:id="@+id/materialTextView3"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:text="@string/developer_name"
                android:padding="8dp"
                android:textAlignment="center"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:id="@+id/materialTextView2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>